--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,7 +19,7 @@
 
 <table>
 <thead>
-      <p><%= link_to "Show", books_path(@book.id) %>
+      <p><%= link_to "Show", book_path(@book.id) %>
 
       <%= link_to "Back", books_path %></p>
 </thead>
