--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= book.body%></td>
         <td><%= link_to "show", book_path(book.id) %></td>
         <td><%= link_to "edit",edit_book_path(book.id) %></td>
-        <td><%= link_to "destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
       </tr>
       <% end %>
 
